Update HelloDataTypesInteger.java